# huffman

./: CMakeLists.txt
demo/: CMakeLists.txt
demo/include/: huffman.hpp  rle.hpp
demo/res/: ldr3_1101__result.output
demo/src/: main.cpp
demo_fstream/: CMakeLists.txt
demo_fstream/include/: binarystream.hpp
demo_fstream/src/: main.cpp
huffcomp/: CMakeLists.txt
huffcomp/src/: main.cpp
libhuffman/: CMakeLists.txt
libhuffman/include/: binarystream.hpp  heap.hpp
libhuffman/lib/: huffman.cpp  huffman.hpp  rle.cpp  rle.hpp
